SERVER-25937 Writing to system.views collection should not error when featureCompatibilityVersion is 3.2